Correct to overflow-y

--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,7 @@ h1 {
   background-color: lightslategrey;
   width: 100%;
   height: 200px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .folder-name, .long-url {
